--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ footer {
 
 main {
   background-color: #ccc;
-  height: 250px;
+  /*height: 250px;*/
   width: 100%;
 }
 
@@ -129,18 +129,34 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1em;
 }
 
 #div-1,
 #div-2,
 #div-3 {
-  display: flex;
+  /*Removed the following properties as they were already inherited from flex item*/
+    /*display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-  line-height: 1.5em;
-  font-size: 1.25em;
-  height: auto;
+  line-height: 1.5em;*/
+  font-size: 1.1em;
+  /*height: auto;*/
+  /*flex: 1 300px;*/
+  /*align-items: stretch;*/
+  min-height: 300px;
+}
+#div-1 {
+    background: #d76f72;
+}
+
+#div-2 {
+    background: #cacec6;
+}
+
+#div-3 {
+    background: #64b6ac;
 }
 
 .wrapper span {
@@ -166,8 +182,9 @@ main {
   line-height: 1.5em;
   font-size: 1.6em;
   background-color: #f16059;
-  width: 30%;
-  height: 200px;
+  /*width: 30%;*/
+  /*height: 200px;*/
+  padding: 1em;
 }
 
 /* ==========================================================================
@@ -256,16 +273,18 @@ main {
     }
 }
 
-@media (min-width: 1200px) {
-  #div-1,
-  #div-2{
-      /* set your flex value to 1 50% */
+@media (min-width: 768px) {
+    #div-1,
+    #div-2{
+        /* set your flex value to 1 50% */
+        flex: 1 45%;
+    }
+  
+    #div-3 {
+      /* set your flex value to 1 100% */
+      flex: 1 100%;
+    }
   }
-
-  #div-3 {
-    /* set your flex value to 1 100% */
-  }
-}
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
